@@ -713,11 +713,16 @@ dojo.declare("com.nuclearunicorn.game.ui.GamePage", null, {
 	msg: function(message, type, tag){
 		var hasCalendarTech = this.science.get("calendar").researched;
 
+
+		var original = this.console.static.msg(message, type, tag);
+
 		if (hasCalendarTech){
-			message = "Year " + this.calendar.year + ", " + this.calendar.seasons[this.calendar.season].title + ": " + message;
+			this.console.static.msg("Year " + this.calendar.year + " - " + this.calendar.seasons[this.calendar.season].title, "date", null);
+			//message = "Year " + this.calendar.year + ", " + this.calendar.seasons[this.calendar.season].title + ": " + message;
 		}
 
-		return this.console.static.msg(message, type, tag);
+		//return this.console.static.msg(message, type, tag);
+		return original
 	},
 
 	clearLog: function(){
