@@ -292,6 +292,18 @@ td.resLimitWarn {
     color: coral;
 }
 
+.msg.type_date {
+    color: #ff7f50;
+    margin-top: 15px;
+    text-transform: uppercase;
+    font-size: 90%;
+    border-bottom: solid 1px #ff7f50;
+}
+
+.msg.type_date:first-child {
+    margin-top: 0px;
+}
+
 #gameContainerId {
     border: 0px solid white !important;
     padding: 0px;
@@ -466,4 +478,9 @@ h1 {
     text-transform: uppercase;
     margin-top: 30px;
     font-weight: normal;
+}
+
+.expandAllBar {
+    float: right;
+    margin-top: -15px;
 }
